# auto-wod-booking

./: README.md  booking.py  calisthenics_events.csv  crawler.py  pyproject.toml  run.py  scheduler.py
